--- a/welmae_flutter/pubspec.yaml
+++ b/welmae_flutter/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -69,7 +71,7 @@ dependencies:
   go_router: ^12.1.3
   
   # Utilities
-  intl: ^0.18.1
+  intl: ^0.20.2
   uuid: ^4.1.0
   url_launcher: ^6.2.1
   
